feat: 后端: 尝试修复问题

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,3 +23,4 @@ mybatis:
   type-aliases-package: com.andy.messageboard.entity
   configuration:
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
