--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,10 +17,13 @@ spring:
       max-lifetime: 60000
       maximum-pool-size: 20
       minimum-idle: 1
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.andy.messageboard.entity
+  type-aliases-package: com.andy.waterdam.pojo
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
